# noxy

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: noxy_file_structure.md  noxy_project_overview.md  project_overview.md  rust_module_naming_convention.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
api/c/: Cargo.toml
api/c/src/: lib.rs
api/python/: Cargo.toml
api/python/src/: lib.rs
api/rust/: Cargo.toml
api/rust/src/: lib.rs
apps/noxy-sim/: Cargo.toml
apps/noxy-sim/src/: main.rs
assets/shaders/: collision_detection.wgsl  compute_physics.wgsl  euler_integration.wgsl  force_computation.wgsl  rk4_integration.wgsl  verlet_integration.wgsl
docs/: GPU_PHYSICS_ARCHITECTURE.md  PROJECT_STATUS.md  TECH_STACK_DECISIONS.md
lib/noxy-physics/src/: lib.rs  simulation.rs  utils.rs
lib/noxy-physics/src/backends/: cpu.rs
lib/noxy-physics/src/core/: collision.rs  forces.rs  integration.rs  rigidbody.rs  shapes.rs
lib/noxy-physics/src/solvers/: pbd.rs  traits.rs
lib/physics/: Cargo.toml
lib/physics/src/: scene.rs
lib/physics/src/backends/: gpu.rs  mod.rs  traits.rs
lib/physics/src/core/: constraints.rs  forces.rs  materials.rs  mod.rs
lib/physics/src/solvers/: implicit.rs  mod.rs  xpbd.rs
lib/physics/src/utils/: math.rs  profiler.rs
src/: app.rs  lib.rs  main.rs  physics.rs  utils.rs
src/app/: modes.rs  renderer.rs
src/app/renderer/: camera.rs  types.rs
src/physics/: backends.rs  core.rs  simulation.rs
src/physics/backends/: cpu.rs  factory.rs  gpu.rs  traits.rs
src/physics/backends/gpu/: buffers.rs  compute.rs  pipeline.rs
src/physics/core/: collision.rs  constraints.rs  forces.rs  integration.rs  rigidbody.rs  shapes.rs
src/utils/: math.rs
tests/: cpu_gpu_consistency_test.rs  gpu_simple_test.rs  mod.rs
tests/integration/: backend_consistency.rs  backend_selection.rs  gpu_backend.rs  main_api.rs  mod.rs  physics_system.rs
tests/physics/: mod.rs
tests/physics/conservation/: energy.rs  mod.rs  momentum.rs
tests/physics/stability/: integration_stability.rs  mod.rs  numerical_stability.rs
tests/unit/: mod.rs
tests/unit/physics/: forces.rs  integration.rs  mod.rs  rigidbody.rs  shapes.rs
