[package]
name = "noxy"
version = "0.0.0"
edition = "2021"
authors = ["nop noplab90@gmail.com"]
description = "WIP"
license = "MIT"

[dependencies]
env_logger = "0.11"
log = "0.4"
wgpu = "25.0"
winit = "0.30"
anyhow = "1"
pollster = "0.4.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
glam = { version = "0.30.3", features = ["bytemuck", "serde"] }

# Core math and GPU  
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# Parallel processing and system
rayon = "1.10"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1.0"

# Data and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Robotics
urdf-rs = "0.8"

# Logging and measurement
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization for mode data output
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
