[workspace]
resolver = "2"
members = [
    "lib/noxy-physics",
    "api/rust",
    "api/python", 
    "api/c",
    "apps/noxy-sim",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["nop noplab90@gmail.com"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Core math and GPU
glam = { version = "0.30.3", features = ["bytemuck", "serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
wgpu = "25.0"
bytemuck = { version = "1.23.0", features = ["derive"] }

# Parallel processing and system
rayon = "1.10"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "1.0"

# Data and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"

# Robotics
urdf-rs = "0.8"

# Logging and measurement
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Graphics and windowing
winit = "0.30"
pollster = "0.4.0"

# Python integration
pyo3 = { version = "0.22", features = ["extension-module", "abi3"] }
numpy = "0.22"

# C API generation
cbindgen = "0.27"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Internal workspace crates
noxy-physics = { path = "lib/noxy-physics" }
noxy-api-rust = { path = "api/rust" }
noxy-python = { path = "api/python" }
noxy-c-api = { path = "api/c" }